# medical-interpreter

./: .firebaserc  .gitattributes  .gitignore  README.md  addDummydata.js  pubspec.yaml
.dart_tool/: package_config_subset
.dart_tool/chrome-device/Default/: BrowsingTopicsState  DIPS  Favicons  History  History-journal  InterestGroups-wal  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Visited Links  Web Data  fdfb23bb-7a95-494b-8db1-486400fd6142.tmp  load_statistics.db-shm  load_statistics.db-wal
.dart_tool/dartpad/: web_plugin_registrant.dart
.dart_tool/flutter_build/fdd4ea4fff7c066cef3c60bb804ef77a/: .filecache  debug_android_application.stamp  (+6 more)
android/: build.gradle
android/app/: build.gradle
backend/: pyproject.toml  test_fine_tuned_model.py  train_translation_model.py
backend/app/: camera.py  gemini.py  main.py  translation.py
backend/scripts/: train_translation_model.py  train_visual_model.py
backend/tests/: test_main.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/screens/: conversations_screen.dart  detailed_conversation_screen.dart  home_screen.dart  interpreter_screen.dart
lib/widgets/: camera_view.dart  camera_view_web.dart  emotion_indicator.dart  translation_display.dart  understanding_indicator.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: interpreter_screen_test.dart  widget_test.dart
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+279 files in other folders)
